fix country flag spacing after latest change

--- a/ui/v2.5/src/index.scss
+++ b/ui/v2.5/src/index.scss
@@ -157,6 +157,13 @@ dd {
     margin-bottom: 0;
   }
 
+  .country,
+  .performer-country {
+    .mr-2.fi {
+      margin-left: 0.5rem;
+    }
+  }
+
   .alias-head {
     color: #868791;
   }
